# WaterSim

./: .gitignore  .gitmodules  CONTRIBUTING.md  FLIP_summary.md  LICENSE  README.md  snippets.md
2d/: CMakeLists.txt  README.md  main.cpp  prova  prova.cpp
2d/include/: Arrow.h  FLIP.cpp  FLIP.h  Gui.cpp  Gui.h  Mac2d.cpp  Mac2d.h  Particle.cpp  Particle.h  RigidObject.cpp  Simulation.h  Simulator.h  WaterSim.cpp  WaterSim.h
3d/: .gitignore  CMakeLists.txt  DummySim.h  main.cpp  meshvisual.cpp  netcdf-test.cpp  viewmesh.cpp  vim.makefile  watersim-cli.cpp  watersim-gui.cpp
3d/benchmarks/: Makefile  README.md  benchmark-1-0.json  benchmark-1-1.json  benchmark-1-2.json  benchmark-1-3.json  benchmark-1-4.json  benchmark-2-0.json  benchmark-2-1.json  benchmark-2-2.json  benchmark-2-3.json  benchmark-2-4.json
3d/include/: ConjugateGradient.hpp  FLIP.cpp  FLIP.h  Gui.cpp  Gui.h  Mac2d.cpp  Mac2d.h  Mac3d.cpp  Mac3d.h  MeshExporter.cpp  MeshExporter.h  NcReader.h  NcWriter.h  Particle.h  Particles.h  RigidObject.cpp  RigidObject.h  SimConfig.h  Simulation.h  Simulator.h  WaterSim.cpp  WaterSim.h  WaterSimGui.h  conjugate_gradient.hpp  string_format.h  tsc_x86.hpp
3d/include/kernels/: axpy.h  axpymax.h  axpyz.h  axpyzmax.h  axy.h  dot.h  xmax.h
3d/src/: BaseObject.cpp  CojugateGradient.cpp  ConjugateGradient.cpp  FLIP.cpp  Gui.cpp  Mac3d.cpp  MeshExporter.cpp  NcReader.cpp  NcWriter.cpp  Particles.cpp  SimConfig.cpp  WaterSim.cpp  WaterSimGui.cpp
3d/src/flip-methods/: advance_particles.cpp  apply_boundary_conditions.cpp  apply_forces.cpp  apply_pressure_correction.cpp  grid_to_particle.cpp  particle_to_grid.cpp
3d/standalone/: conjugate_gradient.cpp
3d/tests/: CMakeLists.txt  test-interpolation-bilinear-normalized.cpp  test-interpolation-bilinear.cpp  test-interpolation-grid-p.cpp  test-interpolation-grid-u.cpp  test-interpolation-linear-normalized.cpp  test-interpolation-linear.cpp  test-interpolation-trilinear-normalized.cpp  test-interpolation-trilinear.cpp  test-pressure-solver.cpp  test-simconfig-fluidregion.cpp  test-sparse-mm.cpp  test-sprarse-mm.cpp  test-validation-advance-particles.cpp  test-validation-apply-bcs.cpp  test-validation-apply-forces.cpp  test-validation-grid-to-particle.cpp  test-validation-particle-to-grid.cpp  test-validation-pressure-correction.cpp
3d/tests/includes/: watersim-test-common.h
3d/validation_data/: ref.nc  validation-config.json
cmake/: FindLIBIGL.cmake
demos/0_dummy/: CMakeLists.txt
demos/1_cannonball/: CMakeLists.txt  CannonBallSim.cpp  CannonBallSim.h  main.cpp
demos/data/: cube_cross.off  cube_opposite.off  sphere.off  t.off
include/: BaseObject.h
scripts/: load_timing_info.py  plot-benchmarks.py  plot-roofline.py
